/*
 * Copyright (c) 2026 Luis Paolo Pepe Barra (@LuisPPB16).
 * All rights reserved.
 */

plugins {
    id 'java'
    id 'org.jetbrains.intellij.platform' version '2.10.5'
}

group = 'com.projectsapo'
version = '1.1.1'

repositories {
    mavenCentral()
    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
    intellijPlatform {
        defaultRepositories()
    }
}

dependencies {
    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    // SAST - JavaParser
    implementation 'com.github.javaparser:javaparser-core:3.26.2'

    // JSON - Jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'

    // Testing
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    intellijPlatform {
        intellijIdeaCommunity '2025.1'
        bundledPlugin 'org.jetbrains.idea.maven'
        bundledPlugin 'com.intellij.gradle'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:all" << "-Werror" << "-Xlint:-processing" << "-Xlint:-unchecked"
}

test {
    useJUnitPlatform()
}
